Finalized image transformation scheduler #3